tests/compile/scope_callback_capture.stderr
error[E0599]: no method named `scope` found for struct `Lua` in the current scope
 --> tests/compile/scope_callback_capture.rs:5:9
  |
5 |     lua.scope(|scope| {
  |     ----^^^^^ method not found in `Lua`
